fixed the overlapping text in the headerbar

--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -140,6 +140,7 @@ section {
 }
 
 .header-left > h1 {
+  background-color: #b2bac0;
   position: absolute;
   line-height: 50px;
   margin: 0 0 0 15px;
